<resources>
    <string name="app_name">Inter-rapidisimo</string>
    <string name="email">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Continuar</string>
    <string name="error">Error</string>
    <string name="empty_fields_error">Por favor, diligencie todos los campos</string>
    <string name="invalid_credentials_error">Nombre de usuario o contraseña no válidos</string>
    <string name="version_info">Información de la versión</string>
    <string name="back">Ir al inicio</string>
    <string name="logout">Cerrar sesión</string>
    <string name="go_to_tables">Ir a tablas</string>
    <string name="go_to_localities">Ir a localidades</string>
    <string name="dates_user">Datos del usuario</string>
    <string name="identification">Identificación</string>
    <string name="name">Nombre</string>
    <string name="user">Usuario</string>
    <string name="identification_display">%1$s: %2$s</string>
    <string name="message_version">%1$s %2$s</string>
    <string name="localities">Localidades</string>
    <string name="schemas">Tablas</string>
    <string name="loading">Cargando, por favor espere…</string>
    <string name="password_empty">Por favor ingresa la contraseña</string>
    <string name="user_empty">Por favor ingresa el usuario</string>
    <string name="retry">Reintentar</string>
    <string name="confirm_logout">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="confirm">Confirmar</string>
    <string name="canel">Cancelar</string>
    <string name="date">Fecha</string>
</resources>