<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_map"
    tools:context=".ui.view.activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/very_light_gray">

            <ImageView
                android:id="@+id/logo_imageView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_interrapidisimo_name"
                app:layout_constraintBottom_toTopOf="@+id/hint_email_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hint_email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="@color/gray_dark"
                android:text="@string/email"
                app:layout_constraintBottom_toTopOf="@+id/user_editText"
                app:layout_constraintStart_toStartOf="@+id/user_editText" />

            <EditText
                android:id="@+id/user_editText"
                android:layout_width="match_parent"
                android:paddingStart="10dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/ic_button_white"
                android:inputType="text"
                android:maxLength="20"
                app:layout_constraintBottom_toTopOf="@+id/hint_password_textview"
                tools:layout_editor_absoluteX="20dp" />

            <TextView
                android:id="@+id/hint_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="@color/gray_dark"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@+id/password_editText"
                app:layout_constraintStart_toStartOf="@+id/password_editText" />

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:paddingStart="10dp"
                android:maxLength="20"
                android:background="@drawable/ic_button_white"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/ic_button_blue"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/version_layout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logo_version_imageview"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_logo_interrapidisimo_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/version_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/version_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Versión"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logo_version_imageview"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>